lab5/test/96-unterminated.oc.err
96-unterminated.oc:6:15: warning: missing terminating " character
    string s = "abc;
               ^
96-unterminated.oc:7:13: warning: missing terminating ' character
    char c = 'a;
             ^
96-unterminated.oc:8:8: warning: missing terminating " character
    s = "abcd\";
        ^
96-unterminated.oc:9:8: warning: missing terminating " character
    s = "abc|\
        ^
@ Ø4<V:5.15: invalid token ("\*/")
@ Ø4<V:5.20: syntax error, unexpected ';'
@ Ø4<V:6.15: invalid token ("abc;)
@ Ø4<V:7.9: syntax error, unexpected TOK_IDENT
@ Ø4<V:7.13: invalid token ('a;)
@ Ø4<V:8.8: invalid token ("abcd\";)
@ Ø4<V:9.8: invalid token ("abc|   ;)
@ Ø4<V:11.8: invalid token (23foobar)
