lab5/test/96-unterminated.oc.valgrind
==24325== Memcheck, a memory error detector
==24325== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
==24325== Using Valgrind-3.14.0 and LibVEX; rerun with -h for copyright info
==24325== Command: ../oc 96-unterminated.oc
==24325== 
96-unterminated.oc:6:15: warning: missing terminating " character
    6 |    string s = "abc;
      |               ^
96-unterminated.oc:7:13: warning: missing terminating ' character
    7 |    char c = 'a;
      |             ^
96-unterminated.oc:8:8: warning: missing terminating " character
    8 |    s = "abcd\";
      |        ^
96-unterminated.oc:9:8: warning: missing terminating " character
    9 |    s = "abc|\
      |        ^
ðÚ:5.15: invalid token ("\*/")
ðÚ:5.20: syntax error, unexpected ';'
ðÚ:6.15: invalid token ("abc;)
ðÚ:7.9: syntax error, unexpected TOK_IDENT
ðÚ:7.13: invalid token ('a;)
ðÚ:8.8: invalid token ("abcd\";)
ðÚ:9.8: invalid token ("abc|   ;)
ðÚ:11.8: invalid token (23foobar)
==24325== 
==24325== HEAP SUMMARY:
==24325==     in use at exit: 0 bytes in 0 blocks
==24325==   total heap usage: 84 allocs, 84 frees, 113,583 bytes allocated
==24325== 
==24325== All heap blocks were freed -- no leaks are possible
==24325== 
==24325== For counts of detected and suppressed errors, rerun with: -v
==24325== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
